2009-01-03  Eric Belanger  <eric@archlinux.org>

	* eventlog 0.2.9-1
	* Upstream update
	* Added ChangeLog