@@ -3,7 +3,7 @@
 # Contributor: Judd Vinet <jvinet@zeroflux.org>
 
 pkgname=eventlog
-pkgver=0.2.9
+pkgver=0.2.12
 pkgrel=1
 pkgdesc="A new API to format and send structured log messages"
 arch=('i686' 'x86_64')
@@ -11,14 +11,19 @@ url="http://www.balabit.com/support/community/products/"
 license=('BSD')
 depends=('glibc')
 options=('!libtool')
+changelog=ChangeLog
 source=(http://www.balabit.com/downloads/files/eventlog/${pkgver%.*}/eventlog_${pkgver}.tar.gz)
-md5sums=('76e3d7a0b8f335c12099e9b91191fbf1')
-sha1sums=('2cc6a4d1dc07ab84832f2cd44822ee7b339deb51')
+md5sums=('3d6ebda8a161d36cb40d09328f78786b')
+sha1sums=('3e35a634e7de029ab9d36995a085bfcb00ed6a4d')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var || return 1
-  make || return 1
-  make DESTDIR=${pkgdir} install || return 1
+  ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var
+  make
+}
+
+package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
+  make DESTDIR=${pkgdir} install
   install -D -m644 COPYING ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
 }
